Fixed line-height property issue causing multi-line titles to have overlapping text.

--- a/src/components/article.module.css
+++ b/src/components/article.module.css
@@ -35,6 +35,7 @@
     display: block;
     text-align: center;
     padding: .5rem;
+    line-height: 3rem !important;
 }
 
 .articleMeta {
